# faraalkhata

./: .env.example  .gitignore  README.md  biome.json  index.html  package.json  pyproject.toml  pytest.ini  tsconfig.json
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: __init__.py  product.py  user.py
app/dependencies/: auth.py  db.py
app/schemas/: product.py
app/services/: products.py
src/: main.tsx  routeTree.gen.ts  styles.css
src/components/: OrderForm.tsx  OrdersPage.tsx
src/components/auth/: FormField.tsx
src/components/customers/: CustomerCard.tsx  CustomerForm.tsx  CustomersPage.tsx
src/components/layout/: AppLayout.tsx  DesktopNavContent.tsx  MobileBottomNavigation.tsx  MobileNavContent.tsx
src/components/order-form/: CustomerQuickAdd.tsx  DeliveryAddressForm.tsx  Step1Customer.tsx  Step2Products.tsx  Step3Review.tsx
src/components/orders/: CustomerQuickAdd.tsx  DeliveryAddressForm.tsx  OrderCard.tsx  OrderForm.tsx  OrdersPage.tsx  Step1Customer.tsx  Step2Products.tsx  Step3Review.tsx
src/components/products/: ProductCard.tsx  ProductForm.tsx  ProductsPage.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useCustomerForm.ts  useCustomers.ts  useOrderForm.ts  useOrders.ts  useProductForm.ts  useProducts.ts
src/lib/: data.ts  supabase.ts
src/routes/: $.tsx  __root.tsx  _authenticated.tsx  _public.tsx  index.tsx
src/stores/: auth.ts
src/types/: auth.ts  customer.ts  order.ts  product.ts  shared.ts
supabase/migrations/: 20250921192733_create_users_and_profiles.sql  20250922045808_create_products_schema.sql  20250925042221_create_customers_schema.sql  20251007035501_create_orders_inventory_suppliers_delivery_schema.sql  2025100735501_create_orders_system.sql
tests/: conftest.py  test_product_service.py
(+12 files in other folders)
